samples/_failures_safe/1761448747_0d76b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa4078d8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_fa4078d8.c:164:20: error: missing terminating " character
  164 |             printf("Node %d:
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_fa4078d8.c:164:13: error: expected expression at end of input
  164 |             printf("Node %d:
      |             ^~~~~~
./samples/SAFE/__tmp_fa4078d8.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa4078d8.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa4078d8.c:164:13: error: expected declaration or statement at end of input
